k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nodered
  name: nodered
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodered
  template:
    metadata:
      labels:
        app: nodered
    spec:
      containers:
      - name: nodered
        image: nodered/node-red:latest
        resources:
          limits:
            memory: "512Mi"
            cpu: "1"
          requests:
            memory: "256Mi"
            cpu: "0.2"
        ports:
        - containerPort: 1880
        volumeMounts:
        - name: nodered-claim
          mountPath: /data/nodered
      volumes:
      - name: nodered-claim
        persistentVolumeClaim:
          claimName: nodered-claim
